# sexy-claude-code

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-14-stream-json-implementation.md  2026-02-14-stream-json-rewrite-design.md  2026-02-14-theme-switcher-action-menu-design.md  2026-02-14-theme-switcher-implementation.md  2026-02-17-plugin-browser-design.md
src/: app.rs  config.rs  cost.rs  diff.rs  git.rs  history.rs  keybindings.rs  main.rs  theme.rs  todo.rs
src/claude/: commands.rs  conversation.rs  events.rs  mod.rs  process.rs  sessions.rs
src/pty/: mod.rs  process.rs
src/terminal/: converter.rs  mod.rs
src/ui/: borders.rs  claude_pane.rs  header.rs  input.rs  markdown.rs  mod.rs  overlay.rs  status_bar.rs  toast.rs
tests/: config_test.rs  converter_test.rs  pty_integration_test.rs
