[package]
name = "sexy-claude"
version = "0.2.0"
edition = "2021"
description = "A beautiful terminal wrapper for Claude Code"
license = "MIT"

[[bin]]
name = "sexy-claude"
path = "src/main.rs"

[[bin]]
name = "sc"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
vt100 = "0.15"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"
unicode-width = "0.2"
fuzzy-matcher = "0.3"
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

[dev-dependencies]
tempfile = "3"
